--- a/styles/about.css
+++ b/styles/about.css
@@ -1,16 +1,12 @@
 .about{
     width: 100%;
-    display: flex;
-    justify-content: space-between;
+    padding: 46px 15px;
     background: #F4F5F7;
-    padding: 77px 130px 76px 130px;
-    
-}
-.article{
-    width: 555px;
-  
 }
 
+.article:last-child{
+    margin-top: 20px;
+}
 .article__title{
     font-weight: 700;
     font-size: 22px;
@@ -24,3 +20,21 @@
     margin-bottom: 0;
     margin-top: 6px;
 }
+
+
+@media screen and (min-width:400px){
+    .about{
+        display: flex;
+        justify-content: space-between;
+        padding: 77px 130px 76px 130px; 
+    }
+    .article{
+        width: 555px;
+      
+    }
+    .article:last-child{
+        margin-top: 0px;
+    }
+}
+
+
