--- a/styles/features.css
+++ b/styles/features.css
@@ -2,7 +2,11 @@
     display: flex;
     position: relative;
 }
-
+ @media screen and (max-width:399px){
+    .features{
+     display: none;
+    }
+ }
 
 .features__content{
     width: 1140px;
