--- a/styles/header.css
+++ b/styles/header.css
@@ -1,17 +1,73 @@
-
 .header{
-    width: 1140px;
-    height: 62px;
-    margin: auto;
+    height: 64px;
+    width: 100%;
+    background-color: #fff;
     display: flex;
- 
+    align-items: center;
+    padding-left: 15px;
 }
 
-
 .navigation{
+    display: none;
+}
+.header__button{
+    display: none;
+}
+
+.header__menu-button{
+    width: 58px;
+    border:non;
+    border-left: 1px solid #00000026;
+    height: 100%;
     margin-left: auto;
-    margin-top: 7px;
-    margin-right: 75px;
+    background: transparent;
+}
+
+.header__menu-icon{
+    width:18px;
+    height: 13px;
+    background-image: url("../img/icon-humberger.png");
+    display: inline-block;
+}
+
+@media screen and (min-width:400px){
+
+    .top-section{
+        background: #F3C6BD;
+        padding-top: 39px;
+    }
+    .header__menu-button {
+        display: none;
+    }
+    .navigation{
+        display: block;
+        margin-left: auto;
+        margin-top: 7px;
+        margin-right: 75px;
+    }
+    .header{
+        width: 1140px;
+        height: 62px;
+        margin: auto;
+        display: flex;
+     
+    }
+    .header__button{
+        display: block;
+    }
+    .logo__description{
+        font-size: 18px;
+        line-height: 25px;
+        color: #2B292D;
+        opacity: 0.6;
+    }
+
+    .logo__image{
+        width: 60px;
+        height: 60px;
+        margin-right: 13px;
+     }
+    
 }
 .navigation__item{
     color:#2B292D;
@@ -39,9 +95,9 @@
   display: flex;
 }
 .logo__image{
-   width: 60px;
-   height: 60px;
-   margin-right: 15px;
+   width: 48px;
+   height: 48px;
+   margin-right: 13px;
 }
 .logo__name{
     font-size: 20px;
@@ -50,10 +106,7 @@
 }
 
 .logo__description{
-    font-size: 18px;
-    line-height: 25px;
-    color: #2B292D;
-    opacity: 0.6;
+   display: none;
 }
 
 .logo__text{
@@ -64,5 +117,5 @@
 
 .top-section{
     background: #F3C6BD;
-    padding-top: 39px;
+
 }
