--- a/styles/comman.css
+++ b/styles/comman.css
@@ -10,9 +10,21 @@
     border-radius: 2px;
     border: none;
 }
-/* @media screen and (min-width:400px){
-.action-button{
-    width: 160px;
-    
+
+@media screen and (min-width:400px){
+    .hide_desktop{
+     display: none;
+    }
 }
-} */
+
+@media screen and (max-width:399px){
+    .hide_mobile{
+     display: none;
+    }
+}
+
+
+
+.hide_mobile{
+
+}
