--- a/styles/headline.css
+++ b/styles/headline.css
@@ -45,13 +45,13 @@
     width: 100%;;
     margin-bottom: 36px;
 }
- @media screen and(max-width:399px){
+@media screen and (max-width:399pxpx){
 .headline__action-btn{
     width: 100%;
 }
 
  }
-@media screen and (min-width:400px){
+ @media screen and (min-width:400px){
 
     .headline{
         position: relative;
