--- a/styles/footer.css
+++ b/styles/footer.css
@@ -11,41 +11,82 @@
 }
 
 .footer__description{
+    display: none;
+    width: 360px;
     line-height: 26px;
     font-size: 18px;
-    width: 360px;
     margin-top: 26px;
     color: rgba(43, 41, 45, 0.6);
 }
 
+
 .footer-navigation{
-    
-    width: 1140px;
-    margin: 0 auto;
-    height: 338px;
     display: flex;
-  
+    flex-direction: column;
 }
 
+@media screen and (min-width:400px){
+    .footer-navigation{
+        width: 1140px;
+        margin: 0 auto;
+        height: 338px;
+        display: flex;
+        flex-direction: row;
+    }
+ }
+
 .downloads {
-    margin-top: 25px;
+    margin: 25px 15px 0 15px;
+    display: flex;
+    justify-content: center;
 }
+
+@media screen and (min-width:400px){
+    .downloads {
+         margin: 0;
+         margin-top: 25px;
+        justify-content: left;
+    }
+}
+ 
 .downloads__item{
     margin-right: 10px;
 }
 
 .additional-navigation{
-    margin-top: 60px;
-    margin-left: auto;
+  
+    margin-left: 15px;
+    margin-right: 15px;
     display: flex;
+    flex-direction: column;
 
 }
+
+@media screen and (min-width:400px){
+    .addtional-navigation{
+
+        margin-top: 60px;
+        margin-left: auto;
+        flex-direction: row;
+    }
+ }
+
 
 .additional-navigation__column{
    
-    margin-right: 29px;
+    
+    margin-top: 30px;
 
 }
+
+@media screen and (min-width:400px){
+    .additional-navigation__column{
+   
+        margin-top: 0;
+        margin-right: 29px;
+    
+    }
+ }
 
 .nav-links{
     width: 265px;
@@ -61,31 +102,56 @@
     list-style-type: none;
     font-size: 18px;
     line-height: 30px;
-    
-color: rgba(43, 41, 45, 0.6);
-padding: 0;
-margin: 0;
-margin-top: 18px;
+    color: rgba(43, 41, 45, 0.6);
+    padding: 0;
+    margin: 0;
+    margin-top: 18px;
 }
 .footer__line{
     border-top: 1px solid #2B292D;
     width: 100%;
     opacity: 0.1;
     margin:0;
-}
-.footer-links{
-   
-    width: 1140px;
-    height: 50px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-}
-.terms{
-    line-height: 50px;
-    font-size: 14px;
+    margin-top: 40px;
 }
 
+@media screen and (min-width:400px){
+    .footer__line{
+       
+       margin: 0;
+        
+    }
+}
+.footer-links{
+    
+    margin-left: 15px;
+   
+    display: flex;
+   
+    flex-direction: column;
+}
+
+@media screen and (min-width:400px){
+    .footer-links{
+        width: 1140px;
+        height: 50px;
+        flex-direction: row;
+        margin: 0 auto;
+        align-items: center;
+    }
+ }
+.terms{
+    line-height: 22px;
+    font-size: 14px;
+    margin-top: 30px;
+}
+
+@media screen and (min-width:400px){
+    .terms{
+        line-height: 50px;
+        margin-right: 0;
+    }   
+ }
 .terms__items{
     text-decoration: none;
     color: rgba(43, 41,45, 0.6);
@@ -93,8 +159,71 @@ margin-top: 18px;
 }
 
 .social-links{
-    margin-left: auto;
+    /* margin-left: 15px; */
+    margin-top: 30px;
+    margin-bottom: 23px;
 }
+
+
+@media screen and (min-width:400px){
+    .social-links{
+        margin-left: auto;
+        margin-bottom: 0;
+    }    
+ }
 .social-links__item{
     margin-left: 20px;
 }
+
+.social-links__item:first-child{
+    margin-left: 0;
+}
+
+
+
+
+
+.logo-vertical{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+
+.logo-vertical__image{
+      width: 60px;
+      height: 60px;
+}
+
+.logo-vertical__name{
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 25px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.logo-vertical__description{
+
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  color: rgba(43, 41, 45, 0.6);
+}
+
+@media screen and (min-width:400px){
+   .logo-vertical{
+        display: none;
+     }
+     .footer__description{
+       display: block;
+    }
+    
+}
+
+@media screen and (max-width:399px){
+    .footer .logo {
+        display: none;
+     }
+}
+
+
