--- a/styles/common.scss
+++ b/styles/common.scss
@@ -11,20 +11,14 @@
     border: none;
 }
 
-@media screen and (min-width:400px){
-    .hide_desktop{
-     display: none;
+.hide_desktop {
+    @include for-large-up {
+        display: none;
     }
 }
 
-@media screen and (max-width:399px){
-    .hide_mobile{
-     display: none;
+.hide_mobile {
+    @include for-large-down {
+        display: none;
     }
-}
-
-
-
-.hide_mobile{
-
 }
