--- a/styles/about.scss
+++ b/styles/about.scss
@@ -1,6 +1,6 @@
 .about {
     padding: 46px 15px;
-    
+    width: 100%;
     background-color: #F4F5F7;
     
     @include for-large-up {
@@ -9,7 +9,14 @@
         padding: 77px 130px 76px 130px;
     }
 }
+
+
+
+
 .article{
+    @include for-large-up {
+        width: 555px;
+    }
 &:last-child {
     margin-top: 20px;
     @include for-large-up{
@@ -28,7 +35,5 @@
     margin-bottom: 0;
     margin-top: 6px;
 }
-@include for-large-up {
-    width: 555px;
-}
+
 }
