--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,14 +1,19 @@
-
-.action-button{
-
+.action-button {
     background-color: #3040c4;
-    color:#fff;
-    width: 160px;
+    color: #fff;
     height: 48px;
+    width: 160px;
     font-size: 18px;
     font-weight: 700;
     border-radius: 2px;
     border: none;
+    // @include for-large-up {
+    //     width: 160px;
+    // }
+    &__secondary{
+        color:$text-color-black;
+        background-color: $color-white;
+    }
 }
 
 .hide_desktop {
@@ -21,4 +26,11 @@
     @include for-large-down {
         display: none;
     }
+}
+
+.icon-arrow_right {
+    background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-arrow-right.png);
+    display: inline-block;
+    height: 12px;
+    width: 8px;
 }
