--- a/styles/customers.scss
+++ b/styles/customers.scss
@@ -7,12 +7,13 @@
         flex-direction: row;
         margin: auto;
         justify-content: space-between;
-        padding: 30px 130px 106px;
+        padding-bottom: 106px;
+        padding-top: 30px;
         align-items: center;
     }
     &__row {
         display: flex;
-        justify-content: center;
+        // justify-content: center;
         @include for-large-up {
             flex: 1;
             justify-content: space-around;
@@ -27,17 +28,17 @@
         align-items: center;
         justify-content: center;
         flex: 1;
-        @include for-large-up {
-            border: none;
-            flex-direction: row;
-        }
-      
         &:last-child {
             border-right: none;
         }
-    }
+        @include for-large-up {
+            border: none;
+            // flex-direction: row;
+        } 
+    } 
     &__logo {
         filter: brightness(0);
         max-width: 80%;
     }
-}
+    }
+    
