--- a/styles/tips.scss
+++ b/styles/tips.scss
@@ -8,6 +8,13 @@
 .tip {
     padding: 40px 15px 0 15px;
     border-bottom: 1px solid #E3E3E3;
+
+    &__subtitle {
+        font-weight: 700;
+        font-size: 22px;
+        line-height: 34px;
+        color: $text-color-green;
+    }
     &__title {
         margin: 0;
         margin-top: 17px;
@@ -23,7 +30,7 @@
         margin-top: 12px;
     }
     &__image {
-        margin-top: 20px;
+        margin-top: 29px;
     }
     &__image-caption {
         font-size: 14px;
@@ -40,11 +47,4 @@
         flex-direction: column;
         align-items: center;
     }
-}
-
-span.tip__subtitle {
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 34px;
-    color: $text-color-green;
 }
