--- a/styles/customers.scss
+++ b/styles/customers.scss
@@ -13,7 +13,7 @@
     }
     &__row {
         display: flex;
-        // justify-content: center;
+        justify-content: center;
         @include for-large-up {
             flex: 1;
             justify-content: space-around;
@@ -33,7 +33,7 @@
         }
         @include for-large-up {
             border: none;
-            // flex-direction: row;
+            flex-direction: row;
         } 
     } 
     &__logo {
