--- a/styles/tips.scss
+++ b/styles/tips.scss
@@ -8,13 +8,6 @@
 .tip {
     padding: 40px 15px 0 15px;
     border-bottom: 1px solid #E3E3E3;
-
-    &__subtitle {
-        font-weight: 700;
-        font-size: 22px;
-        line-height: 34px;
-        color: $text-color-green;
-    }
     &__title {
         margin: 0;
         margin-top: 17px;
@@ -30,7 +23,7 @@
         margin-top: 12px;
     }
     &__image {
-        margin-top: 29px;
+        margin-top: 20px;
     }
     &__image-caption {
         font-size: 14px;
@@ -47,4 +40,11 @@
         flex-direction: column;
         align-items: center;
     }
+}
+
+span.tip__subtitle {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 34px;
+    color: $text-color-green;
 }
