--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -55,7 +55,7 @@
     }
     &__learn-more-btn {
         background-color: #fff;
-        color: #3040C4;
+        color: #000000;
         width: 158px;
         height: 48px;
         font-size: 18px;
