--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@
 .order__button {
   margin-top: 12px;
 }
-@media screen and (max-width: 1399px) {
+@media screen and (max-width: 600px) {
   .order__button {
     width: 100%;
   }
@@ -116,7 +116,7 @@
   }
 }
 
-@media screen and (max-width: 1399px) {
+@media screen and (max-width: 600px) {
   .hide_mobile {
     display: none;
   }
@@ -131,6 +131,7 @@
 
 .about {
   padding: 46px 15px;
+  width: 100%;
   background-color: #F4F5F7;
 }
 @media screen and (min-width: 1400px) {
@@ -220,7 +221,7 @@
   display: flex;
   position: relative;
 }
-@media screen and (max-width: 1399px) {
+@media screen and (max-width: 600px) {
   .features {
     display: none;
   }
@@ -327,7 +328,7 @@
     margin: 0;
   }
 }
-@media screen and (max-width: 1399px) {
+@media screen and (max-width: 600px) {
   .footer div.logo {
     display: none;
   }
@@ -689,7 +690,7 @@
 }
 .headline__learn-more-btn {
   background-color: #fff;
-  color: #3040C4;
+  color: #000000;
   width: 158px;
   height: 48px;
   font-size: 18px;
@@ -718,7 +719,7 @@
     margin-left: auto;
   }
 }
-@media screen and (max-width: 1399px) {
+@media screen and (max-width: 600px) {
   .headline__actions-btn {
     width: 100%;
   }
@@ -1076,7 +1077,7 @@ span.tip__subtitle {
     justify-content: center;
   }
 }
-@media screen and (max-width: 1399px) {
+@media screen and (max-width: 600px) {
   .audience__action-btn {
     width: 100%;
   }
