--- a/styles/about.scss
+++ b/styles/about.scss
@@ -1,6 +1,6 @@
 .about {
     padding: 46px 15px;
-    width: 100%;
+    // width: 100%;
     background-color: #F4F5F7;
     
     @include for-large-up {
@@ -10,6 +10,9 @@
     }
 }
 .article{
+    @include for-large-up {
+        width: 555px;
+    }
 &:last-child {
     margin-top: 20px;
     @include for-large-up{
@@ -28,7 +31,5 @@
     margin-bottom: 0;
     margin-top: 6px;
 }
-@include for-large-up {
-    width: 555px;
-}
+
 }
