--- a/styles/inbox.scss
+++ b/styles/inbox.scss
@@ -5,7 +5,8 @@
         margin-top: 103px;
         max-width: 1400px;
         display: flex;
-        padding: 115px 99px 101px 193px;
+        // padding: 115px 99px 101px 193px;
+        padding: 193px 142px 192px 138px;
     }
     &__banner {
         margin: 0;
