--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -1,6 +1,5 @@
 .headline {
     width: 100%;
-  
     @include for-large-up {
         width: 1140px;
         margin: auto;
@@ -56,7 +55,7 @@
     }
     &__learn-more-btn {
         background-color: #fff;
-        color: #000000;
+        color: #3040C4;
         width: 158px;
         height: 48px;
         font-size: 18px;
